--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/c,c++
 # Edit at https://www.toptal.com/developers/gitignore?templates=c,c++
+# Ignore all files without extension
+*
+!/**/
+!*.*
 
 ### C ###
 # Prerequisites
